@@ -92,6 +92,9 @@ S3method(unvr,default)
 S3method(unvr,list)
 S3method(val_lab,data.frame)
 S3method(val_lab,default)
+S3method(valid,data.frame)
+S3method(valid,default)
+S3method(valid,matrix)
 S3method(values2labels,data.frame)
 S3method(values2labels,default)
 S3method(values2labels,list)
